# wasm-game-of-life

./: Cargo.toml  deploy.sh
src/: lib.rs
www/: .gitignore  bootstrap.js  index.html  index.js
